editing reservations page and adjusting Reservation ID to use a string